# FRC-2019

./: .gitignore  JetsonDeployOutput.txt  LICENSE  build.gradle  settings.gradle  sshoutput.txt
gradle/wrapper/: gradle-wrapper.properties
open_camera_stream/: file.sdp  open.bat  sdp.py
open_stream/: file.sdp  stream.bat
src/main/java/org/team2679/frc2019/: IO.java  Main.java  NetworkTablesManager.java
src/main/java/org/team2679/frc2019/subsystems/: Collector.java  Drive.java  Elevator.java  Grabber.java  Subsystem.java  SuperStructure.java
src/main/java/org/team2679/frc2019/wrappers/: TalonSRX.java
src/main/python/vision/: findAverage.py  main.c  main.py  main.pyx  process_cargo.py
src/main/resources/: tiger.properties
vision/: CMakeLists.txt  libgstnvcamera.so.txt
vision/src/main/cpp/: CameraFetcher.cpp  CameraFetcher.h  TigerCamera.cpp  TigerCamera.h  VideoStreamer.cpp  VideoStreamer.h  camera_properties.h  main.cpp  procces.cpp  procces.h  util.h
